welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: reassignment to val
nums=T
    ^indexOfValue:3: error: not found: value T
for (i <- 0 to T.length-1) {
               ^